# ChangeLog for media-sound/freqtweak
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/freqtweak/Attic/ChangeLog,v 1.16 2005/04/25 16:50:52 luckyduck Exp $

*freqtweak-0.6.0-r1 (25 Apr 2005)

  25 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> -freqtweak-0.4.7.ebuild,
  -freqtweak-0.5.0.ebuild, -freqtweak-0.5.2.ebuild,
  +freqtweak-0.6.0-r1.ebuild:
  added modified ebuild for version 0.6.0, fixes #83999. Thanks to Rob Cakebread
  <pythonhead@gentoo.org>

  16 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> freqtweak-0.6.0.ebuild:
  fixed libsigc++ dependency to fix bug #75012.

  18 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  freqtweak-0.6.0.ebuild:
  Stable sparc.

  22 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  freqtweak-0.6.0.ebuild:
  Added to ~sparc.

  03 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  freqtweak-0.6.0.ebuild:
  Stable amd64, x86.

*freqtweak-0.6.0 (05 Jul 2004)

  05 Jul 2004; David Holm <dholm@gentoo.org> freqtweak-0.6.0.ebuild:
  Added to ~ppc.

  05 Jul 2004; Frank van de Pol <fvdpol@gentoo.org> :
  Updated to new upstream release 0.6.0, added ~amd64 keyword, fixed gcc-3.4
  issue. Closes bug #56034

  13 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
  freqtweak-0.4.7.ebuild, freqtweak-0.5.0.ebuild, freqtweak-0.5.2.ebuild:
  Getting rid of virtual/jack.

  26 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  freqtweak-0.4.7.ebuild, freqtweak-0.5.0.ebuild, freqtweak-0.5.2.ebuild:
  Stable on x86.

  10 Feb 2004; Jeremy Huddleston <eradicator@gentoo.org>
  freqtweak-0.4.7.ebuild, freqtweak-0.5.0.ebuild, freqtweak-0.5.2.ebuild:
  Added check for wxGTK being compiled without unicode support to close bug
  #37573.

*freqtweak-0.5.2 (16 Sep 2003)

  16 Sep 2003; rob holland <tigger@gentoo.org> freqtweak-0.5.2.ebuild,
  metadata.xml:
  version bump. reported by the infamous Kasper Souren <Kasper.Souren@ircam.fr>
  ;) closes #27194
